Add part 2 day 4